fix: make app overflow hidden
Temporary fix

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -4,6 +4,8 @@
   height: 100%;
   min-height: 100%;
 
+  overflow: hidden;
+
   width: 100%;
   position: absolute;
   right: 0;
